# sonar-api-wrapper

./: .gitignore  README.md  dev-requirements.txt  publish.sh  pyproject.toml
sonar_api/: __init__.py
sonar_lib/: __init__.py  __version__.py  client.py
tests/: conftest.py  test_sonar_lib.py
