[project]
name = "sonar-lib"
description = "Sonar lib - a Sonarqube api wrapper"
license = {file = "LICENSE"}
authors = [
    {name = "Alessandro Staffolani", email = "alestam93@gmail.com"},
]
keywords = ["sonar", "sonarqube"]
dynamic = [
    "version",
    "readme"
]
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.dynamic]
version = {attr = "sonar_lib.__version__.__version__"}
readme = {file = ["README.md"], ontent-type = "text/plain"}

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-report term"
testpaths = [
    "tests",
]

[tool.coverage.report]
omit = [
    "tests/*",
]

# Python modules and packages that are included in the
# distribution package (and therefore become importable)
[tool.setuptools.packages.find]
exclude = ["tests"]
