[project]
name = "sonar-api-wrapper"
description = "Sonar API Wrapper - a Sonarqube api wrapper"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Alessandro Staffolani", email = "alestam93@gmail.com"},
]
keywords = ["sonar", "sonarqube"]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "requests",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AlessandroStaffolani/sonar-api-wrapper"
Repository = "https://github.com/AlessandroStaffolani/sonar-api-wrapper.git"

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "build",
    "twine"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sonar_api_wrapper/__version__.py"

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-report term"
testpaths = [
    "tests",
]

[tool.coverage.report]
omit = [
    "tests/*",
]
